[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/levelfinal.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Youmu.tscn" type="PackedScene" id=3]
[ext_resource path="res://bgm/youmu_loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://LevelFinal.gd" type="Script" id=6]

[sub_resource type="SegmentShape2D" id=2]
a = Vector2( 615, 359 )
b = Vector2( 639, 0 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 66, 339 )
b = Vector2( 709, 339 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 311, 340 )
b = Vector2( 551, 339 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 67, 381 )
b = Vector2( 312, 340 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 298, 339 )
b = Vector2( 456, 378 )

[sub_resource type="SegmentShape2D" id=7]
a = Vector2( 663, 361 )
b = Vector2( 639, 0 )

[node name="LevelFinal" type="Node2D"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 287, 326 )
__meta__ = {
"_edit_group_": true
}

[node name="Youmu" parent="." instance=ExtResource( 3 )]
position = Vector2( 322, 183 )

[node name="House" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="House"]
position = Vector2( 249, 47 )
polygon = PoolVector2Array( 0, 119, 39, 126, 108, 119, 93, 12, 29, 6 )

[node name="Border" type="StaticBody2D" parent="."]

[node name="Right" type="CollisionShape2D" parent="Border"]
shape = SubResource( 2 )

[node name="Down" type="CollisionShape2D" parent="Border"]
position = Vector2( -67, 21 )
shape = SubResource( 4 )

[node name="Up" type="CollisionShape2D" parent="Border"]
position = Vector2( -67, -184 )
shape = SubResource( 3 )

[node name="Up2" type="CollisionShape2D" parent="Border"]
position = Vector2( -67, -184 )
shape = SubResource( 5 )

[node name="Up3" type="CollisionShape2D" parent="Border"]
position = Vector2( 184, -184 )
shape = SubResource( 6 )

[node name="Left" type="CollisionShape2D" parent="Border"]
position = Vector2( -640, -1 )
shape = SubResource( 7 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -2.0

[connection signal="shoot" from="Player" to="." method="_on_Player_shoot"]
[connection signal="dead" from="Youmu" to="." method="_on_Fairy_dead"]
[connection signal="shoot" from="Youmu" to="." method="_on_Fairy_shoot"]
